Corrected logo image; fixed logo spacing and nav buttons to where I want them to be.

--- a/style/Index/CoBe.css
+++ b/style/Index/CoBe.css
@@ -1030,7 +1030,7 @@ div p.three-pack-text {
 }
 
 .logo-header {
-    width: 35%;
+    width: 45%;
     margin-top: -1%;
 }
 
